--- a/test/Project.toml
+++ b/test/Project.toml
@@ -1,4 +1,8 @@
 [deps]
+ComplementOpt = "3144fb79-1414-4d28-b1d1-63dadd798e24"
 Ipopt = "b6b21f68-93f8-5de0-b562-5493be1d77c9"
 JuMP = "4076af6c-e467-56ae-b986-b466b2749572"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
+
+[sources]
+ComplementOpt = {path = ".."}
